--- a/example.tex
+++ b/example.tex
@@ -9,23 +9,25 @@
 \newcommand*\rfrac[2]{{{}^{#1}\!/_{#2}}} % running fraction with slash - requires math mode.
 \newcommand*\T{\mathsf{T}}
 
-\begin{document}
 
-\IACpaperyear{14}
-\IACpapernumber{D9.2.8}
-\IACconference{65}
-\IAClocation{Toronto, Canada}
-\IACcopyrightA{2014}{the authors}
+\IACpaperyear{22}
+\IACpapernumber{A1.1.1}
+\IACconference{73}{rd}
+\IAClocation{Paris, France}
+\IACdate{18-22 September 2022}
+\IACcopyrightA{2022}{the authors}
 
-\title{Manuscript Template and Style Guide}
+\IACkeyword{International}
+\IACkeyword{Astronautical}
+\IACkeyword{Congress}
 
-%\author{Main~Author\\Affiliation, Country, email address\and
-%		Co-Author\\Affiliation, Country, email address}
-\IACauthor{Main~Author}{Affiliation, Country, email address}
-\IACauthor{Co-Author}{Affiliation, Country, email address}
+\title{Manuscript Template and Style Guide (Title of Your Paper)}
+\IACauthor[true]{Main~Author}{Affiliation, Country}{main.author@example.com}
+\IACauthor{Co Author}{Affiliation, Country}{co.author@example.com}
 
 \abstract{A one paragraph abstract of no more than 400 words must be included at the beginning of the manuscript. It should be a summary and complete in itself (no references to the main body of the manuscript). The abstract should indicate the subjects dealt with within the full text and should state the objectives of the investigation. Newly-observed facts and conclusions of the experiment or argument discussed in the full text must be stated in this summary. Readers should not have to read the full text to understand the abstract. The abstract can be an updated version of the one submitted at the call-for-abstracts but its contents must not differ substantially.}
 
+\begin{document}
 \maketitle
 
 \section{Major Headings}
