updates to better match IAC style

--- a/iac.cls
+++ b/iac.cls
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{iac}[2014/07/24 International Astronautical Congress conference paper LaTeX class]
+\ProvidesClass{iac}[2022/07/12 International Astronautical Congress conference paper LaTeX class]
 
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
@@ -23,6 +23,10 @@
 
 % Times New Roman
 \RequirePackage{mathptmx}
+
+% Bibliography
+\bibliographystyle{ieeetr}
+\usepackage[sort, numbers]{natbib}
 
 % Email hyperlink
 \RequirePackage{hyperref}
@@ -60,16 +64,17 @@
 % Template
 \setlength\parindent{12pt}
 \RequirePackage[]{caption}
-\captionsetup[figure]{name=Fig.,format=hang,indention=-20pt}
-\captionsetup[table]{format=hang,indention=-24pt}
+\captionsetup[figure]{name=Fig.,labelsep=period}
+\captionsetup[table]{labelsep=period}
+
 
 % Section headers
 \titlespacing{\section}{0pt}{*3}{*0.0}
 \titlespacing{\subsection}{0pt}{*2.5}{*0.0}
 \titlespacing{\subsubsection}{0pt}{*2}{*0.0}
 \titleformat{\section}{\normalfont}{\bfseries\thesection.\ }{0.5em}{\textbf{#1}}
-\titleformat{\subsection}{\normalfont}{\thesection.\arabic{subsection}}{0.5em}{\textit{#1}}
-\titleformat{\subsubsection}{\normalfont}{\thesection.\arabic{subsection}.\arabic{subsubsection} }{0pt}{\textit{#1}}
+\titleformat{\subsection}{\normalfont\itshape}{\thesection.\arabic{subsection}}{0.5em}{#1}
+\titleformat{\subsubsection}{\normalfont\itshape}{\thesection.\arabic{subsection}.\arabic{subsubsection}}{0pt}{#1}
 
 % IAC
 \renewcommand{\abstract}[1]{\def\iac@abstract{#1}}
@@ -88,6 +93,7 @@
 \newcommand{\IACcopyrightD}[1]{\def\iac@copyright{Copyright \copyright\,#1 by the International Astronautical Federation. The U.S.\ Government has a royalty-free license to exercise all rights under the copyright claimed herein for Governmental purposes. All other rights are reserved by the copyright owner.}}
 \newcommand{\IACcopyrightDAPL}[1]{\def\iac@copyright{Copyright \copyright\,#1 by the International Astronautical Federation. Under the copyright claimed herein, the U.S.\ Government has a royalty-free license to exercise all rights for Governmental purposes. All other rights are reserved by the copyright owner.}} 
 \newcommand\iac@makecopyright{{\iac@copyright}}
+
 
 \renewcommand\maketitle{\twocolumn[
   \begin{@twocolumnfalse}
@@ -147,7 +153,7 @@
     }%
 	\vskip 2ex \par%
   \centerline{\textbf{Abstract}}%
-  \indent\iac@abstract\par%
+  \hspace{12pt}\iac@abstract\par%
   \ifthenelse{\thekeywordcount > 0}{
   \textbf{Keywords:}%
   \newcounter{keywordnum}%
