--- a/example.tex
+++ b/example.tex
@@ -1,13 +1,9 @@
 \documentclass[]{iac}
 
-\DeclareMathOperator{\E}{E}
-\DeclareMathOperator{\prob}{p}
-\DeclareMathOperator{\tr}{tr}
+\usepackage{nomencl}
+\makenomenclature
 
-\newcommand{\etalia}{\textit{et al.}}
-\newcommand*{\vectornorm}[1]{\left\|#1\right\|}
 \newcommand*\rfrac[2]{{{}^{#1}\!/_{#2}}} % running fraction with slash - requires math mode.
-\newcommand*\T{\mathsf{T}}
 
 
 \IACpaperyear{22}
@@ -17,79 +13,131 @@
 \IACdate{18-22 September 2022}
 \IACcopyrightA{2022}{the authors}
 
-\IACkeyword{International}
-\IACkeyword{Astronautical}
-\IACkeyword{Congress}
+\IACkeyword{(maximum 6 keywords)}
+
+% Additional keywords added with \IACKeyword command
+% \IACkeyword{(maximum 6 keywords)}
 
 \title{Manuscript Template and Style Guide (Title of Your Paper)}
 \IACauthor[true]{Main~Author}{Affiliation, Country}{main.author@example.com}
 \IACauthor{Co Author}{Affiliation, Country}{co.author@example.com}
 
-\abstract{A one paragraph abstract of no more than 400 words must be included at the beginning of the manuscript. It should be a summary and complete in itself (no references to the main body of the manuscript). The abstract should indicate the subjects dealt with within the full text and should state the objectives of the investigation. Newly-observed facts and conclusions of the experiment or argument discussed in the full text must be stated in this summary. Readers should not have to read the full text to understand the abstract. The abstract can be an updated version of the one submitted at the call-for-abstracts but its contents must not differ substantially.}
+\abstract{A concise and factual abstract (written in third person and in one paragraph) of no more than 400 words is required. The abstract should state briefly the purpose of the research, the principal results and major conclusions. An abstract must be stand alone and complete in itself with no references to the main body of the manuscript. References should be avoided, but if essential, then cite the author(s) and year(s). Also, non-standard or uncommon abbreviations should be avoided, but if essential they must be defined at their first mention in the abstract itself. Readers should not have to read the full text to understand the abstract. The abstract can be an updated version of the one submitted at the call-for-abstracts, but its contents must not differ substantially.}
+
+
 
 \begin{document}
 \maketitle
 
-\section{Major Headings}
-Major headings are capitalized, underlined, and centered in the column.
 
-\subsection{Subheadings}
-Subheadings are underlined and placed flush on the left-hand margin of the column.
 
-\subsubsection{Sub-subheadings}
-Sub-subheadings are underlined and indented.
+\section*{Nomenclature}
+This section is not numbered. A nomenclature section could be provided when there are mathematical symbols in your paper. Superscripts and subscripts must be listed separately. Nomenclature definitions should not appear again in the text.
 
-\section{Style Guide}
 
-\subsection{Acronyms}
-Always use the full title followed by the acronym to be used.
 
-\subsection{References}
-List and number all the bibliographical references at the end of the full text, in the order of appearance.\cite{IAFSecretariat2014}
+\section*{Acronyms/Abbreviations}
+This section is not numbered. Define acronyms and abbreviations that are not standard in this section. Such acronyms and abbreviations that are unavoidable in the abstract must be defined at their first mention there. Ensure consistency of abbreviations throughout the article. Always use the full title followed by the acronym (abbreviation) to be used, e.g., reusable suborbital launch vehicle (RSLV), International Space Station (ISS).
 
-\subsection{Equation Numbers}
-When numbering equations, enclose numbers in brackets and place flush right with the right-hand margin of the column.
+
+
+\section{Introduction}
+Section headings are in \textbf{bold} and placed flush on the left hand margin of the column.
+
+The Introduction Section is to state the objectives of the work, provide an adequate background including a brief literature survey, major differences from the others, and sectional organization of this paper. Avoid a too detailed and lengthy literature survey and a summary of the results.
+
+Divide your paper into clearly defined and numbered sections numbered 1., 2., …. Subsections should be numbered \textit{1.1} (then \textit{1.1.1}, \textit{1.1.2}, ...), \textit{1.2}, etc. Use this numbering also for internal cross-referencing: do not just refer to ``the text''. Any subsection may be given a brief heading. Each heading should appear on its own separate line.
+
+\subsection{Subsection headings}
+Subsection headings are in \textit{italics} and placed flush on the left hand margin of the column.
+
+\subsubsection{Sub-subsection headings}
+Sub-subsection headings are in \textit{italics} and placed flush on the left hand margin of the column.
+
+
+
+\section{Materials and methods}
+Provide sufficient detail to allow the work to be reproduced. Methods already published should be indicated by a reference: only relevant modifications should be described.
+
+
+
+
+\section{Theory and calculation}
+A Theory section should extend, not repeat, the background to the article already dealt with in the Introduction and lay the foundation for further work. In contrast, a Calculation section represents a practical development from a theoretical basis.
+
+\subsection{Equation numbers}
+
+Number consecutively any equations that have to be displayed separately from the text (if referred to explicitly in the text). The numbers identifying the equations should be placed in parentheses to the right of the equation. For example:
+
 
 \begin{equation}
-\stackrel{\star}{F}_{12} = -G \cdot \frac{ m_1 \cdot m_2 }{ \left\|\stackrel{\star}{r}_2 - \stackrel{\star}{r}_1\right\|^2 } \cdot \hat{u}_{12}
+    \vec{F}_{g} = -G \frac{m\times m_e}{R_E^2}\vec{i}_r = m\vec{g}_{ta}
 \end{equation}
 
-\subsection{Illustrations and Captions}
-It is important to remember that all artwork, captions, figures (\textit{e.g.}, Fig.~\ref{fig:X}), graphs, and tables (such as Table~\ref{table:X}) will be reproduced exactly as you submitted them. (\textbf{Company logos} and \textbf{identification numbers} are not permitted on your illustrations.)
 
-\begin{figure}
-\includegraphics[width=\columnwidth]{examplefigure.png}
-\caption{\label{fig:X}Title of the figure, left-justified, subsequent text indented. Place figures at the top or bottom of a column wherever possible, as close as possible to the first references to them in the manuscript. Restrict them to single-column width unless this would make them illegible.} 
+
+\subsection{Figure numbers}
+Ensure that each figure/illustration has a title. All figures/illustrations must be numbered and cited (see Fig. \ref{fig:ss2}) in the text consecutively. Place figures/ illustrations as close as possible to the first references to them in the manuscript. Restrict them to single-column width unless this would make them illegible (then extend these figures/illustrations across two columns or place them to the end of your paper).
+
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\columnwidth]{SS2_and_VMS_Eve}
+    \caption{SpaceShipTwo carried under White Knight Two.}
+    \label{fig:ss2}
 \end{figure}
 
-\subsection{Graph Lines, Drawings, and Tables}
-Use black ink on white manuscript and position to fit within one of the columns on the page, and ensure that they remain still readable.
 
-Tables with a moderate amount of information should be positioned within one column. Tables, graphs, or pictures with large amounts of information may extend across two columns.
+\subsection{Tables}
+Tables can be placed either next to the relevant text in the article, or on separate page(s) at the end. Number and cite (as shown in Table \ref{tab:orbitdata}) tables consecutively in accordance with their appearance in the text. Place table title above and any remarks below the table body.
 
-\begin{table}
-\begin{tabular}{rllll}
-\toprule
-& Venus & Earth & Mars & Jupiter \\
-\midrule
-$\rfrac{M}{M_E}$	& 0.82 		& 1 		& 0.11 		& 317.89	\\
-$e$					& 0.007		& 0.017		& 0.093		& 0.048		\\
-$R$ (AU)			& 0.7233	& 1			& 1.524		& 5.203		\\
-$i$ (deg)			& 3.40		& 0			& 1.85		& 1.30		\\
-$T$ (years)			& 0.62		& 1			& 1.88		& 11.86		\\
-\bottomrule
-\end{tabular}
-\caption{\label{table:X}Title of table, left justified, subsequent text indented. Heading centered. Do not use vertical lines within the table; use horizontal lines only to separate headings from table entries.}
+\begin{table}[htbp]
+    \centering
+    \caption{Major data of the orbits of Venus, Earth, Mars and Jupiter}
+    \begin{tabular}{lllll}
+        \toprule
+        & Venus & Earth & Mars & Jupiter \\
+        \midrule
+        $\rfrac{M}{M_E}$	& 0.82 		& 1 		& 0.11 		& 317.89	\\
+        $e$					& 0.007		& 0.017		& 0.093		& 0.048		\\
+        $R$ (AU)			& 0.7233	& 1			& 1.524		& 5.203		\\
+        $i$ (deg)			& 3.40		& 0			& 1.85		& 1.30		\\
+        $T$ (years)			& 0.62		& 1			& 1.88		& 11.86		\\
+        \bottomrule
+    \end{tabular}
+    \label{tab:orbitdata}
 \end{table}
 
-\subsection{Captions, Graph Axes, Legends}
-Captions, graph axes, legends, \textit{etc.}, should be large enough to remain legible.
+Tables with a moderate amount of information should be positioned within one column. Tables, figures or pictures with large amounts of information or size may extend across two columns.
 
-\subsection{Footnotes, Symbols, and Abbreviations}
-Footnotes should be cited using symbols in this order: \footnote{Footnote 1} \footnote{Footnote 2} \footnote{Footnote 3} \footnote{Footnote 4} \footnote{Footnote 5} \footnote{Footnote 6} \footnote{Footnote 7} \footnote{Footnote 8}. Use only standard symbols and abbreviations in text and illustrations.
 
-\subsection{Page Numbers}
-Indicate page numbering at the bottom of each page.
+\subsection{Page numbers}
+Indicate page number at the bottom of each page.
 
+\section{Results}
+Results should be clear and concise.
+
+\section{Discussion}
+This should explore the significance of the results of the work, not repeat them. A combined Results and Discussion section is often appropriate. Avoid extensive citations and discussion of published literature.
+
+\section{Conclusions}
+The main conclusions of the study may be presented in a short Conclusions section, which may stand alone or form a subsection of a Discussion or Results and Discussion section.
+
+\section*{Acknowledgements}
+This section is not numbered.
+
+
+\appendix
+\renewcommand{\thesection}{Appendix \Alph{section}}
+
+\section{(Title)}
+This section is not numbered.
+\section{(Title)}
+This section is not numbered.
+
+\section*{References}
+Journal \cite{VanDerGeer2010}, Conference \cite{Chang2015}
+
+\bibliography{citations}
 
 \end{document}
